--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -58,7 +58,7 @@
         app:layout_constraintTop_toBottomOf="@+id/titleView" />
 
     <TextView
-        android:id="@+id/formatView3"
+        android:id="@+id/seasonView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
