--- a/app/src/main/res/layout/activity_view_anime.xml
+++ b/app/src/main/res/layout/activity_view_anime.xml
@@ -7,11 +7,25 @@
     android:layout_height="match_parent"
     android:background="@color/bgWhite"
     tools:context=".UI.Activities.ViewAnimeActivity">
+
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="45dp"
         tools:context=".UI.Activities.ViewAnimeActivity">
+
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/backgroundPoster" />
+
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/backgroundPoster"
@@ -19,11 +33,11 @@
             android:layout_height="0dp"
             android:outlineProvider="background"
             android:scaleType="centerCrop"
-            app:shapeAppearanceOverlay="@style/roundedImageView"
             app:layout_constraintBottom_toTopOf="@+id/view2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearanceOverlay="@style/roundedImageView" />
 
         <ImageView
             android:layout_width="match_parent"
