added sorting in anime list

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -104,6 +104,11 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="TabLayoutTextSize2">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="AppTheme.Picker" parent="Theme.AppCompat.Light.NoActionBar" >
         <item name="android:textColorPrimary">@color/blue</item>
         <item name="android:textSize">18sp</item>
