--- a/app/src/main/res/layout/add_anime_bottom_sheet.xml
+++ b/app/src/main/res/layout/add_anime_bottom_sheet.xml
@@ -43,24 +43,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="sans-serif-medium"
         android:text="Status: "
         android:textColor="@color/bottomSheetMainTextColor"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="21dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="sans-serif-medium"
         android:text="Episodes: "
         android:textColor="@color/bottomSheetMainTextColor"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/view6"
-        tools:layout_editor_absoluteY="21dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
         android:id="@+id/spinner"
