--- a/app/src/main/res/layout/anime_list_fragment.xml
+++ b/app/src/main/res/layout/anime_list_fragment.xml
@@ -9,6 +9,17 @@
     tools:context=".UI.Fragments.AnimeListFragment">
 
 
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar_layout"
         android:layout_width="match_parent"
@@ -25,7 +36,7 @@
             android:background="?attr/colorSurface"
             app:contentInsetStartWithNavigation="0dp"
             app:layout_scrollFlags="scroll|enterAlways"
-            app:menu="@menu/ranking_menu"
+            app:menu="@menu/list_fragment_menu"
             app:title="Anime List" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -105,19 +116,5 @@
         app:layout_constraintTop_toBottomOf="@+id/appbar_layout"
         tools:listitem="@layout/list_item_layout" />
 
-    <ImageButton
-        android:id="@+id/listSearchButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:paddingLeft="8dp"
-        android:paddingTop="16dp"
-        android:paddingRight="8dp"
-        android:paddingBottom="8dp"
-        android:src="@drawable/ic_baseline_search_24_white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ContentDescription" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
