--- a/app/src/main/res/layout/explore_fragment.xml
+++ b/app/src/main/res/layout/explore_fragment.xml
@@ -85,17 +85,18 @@
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Anime" />
+                android:text="@string/anime" />
+
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Manga" />
+                android:text="@string/manga" />
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Schedule" />
+                android:text="@string/schedule" />
 
         </com.google.android.material.tabs.TabLayout>
 
