fixed night mode colors problem in AnimeChartActivity and SeasonActivity

--- a/app/src/main/res/layout/activity_season.xml
+++ b/app/src/main/res/layout/activity_season.xml
@@ -31,6 +31,7 @@
             android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="?attr/colorSurface"
             android:minHeight="?actionBarSize"
             app:layout_collapseMode="pin"
             app:layout_constraintEnd_toEndOf="parent"
@@ -72,6 +73,7 @@
         android:layout_marginTop="8dp"
         android:paddingStart="10dp"
         android:paddingEnd="5dp"
+        android:background="@color/recycler_view_background_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
