--- a/app/src/main/res/layout/fragment_manga_summary.xml
+++ b/app/src/main/res/layout/fragment_manga_summary.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="-24dp"
         android:background="@drawable/transparent_blue2"
-        app:layout_constraintBottom_toBottomOf="@+id/totalSeasonsView"
+        app:layout_constraintBottom_toBottomOf="@+id/authorsView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,6 +47,30 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
+        android:id="@+id/volume"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Volumes"
+        android:textColor="@color/textColor"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/status" />
+
+    <TextView
+        android:id="@+id/chapters"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Chapters"
+        android:textColor="@color/textColor"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/volume" />
+
+    <TextView
         android:id="@+id/startDate"
         android:layout_width="wrap_content"
         android:layout_height="19dp"
@@ -56,7 +80,7 @@
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/status" />
+        app:layout_constraintTop_toBottomOf="@+id/chapters" />
 
     <TextView
         android:id="@+id/endDate"
@@ -68,7 +92,7 @@
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/status"
-        app:layout_constraintTop_toBottomOf="@+id/broadcastView" />
+        app:layout_constraintTop_toBottomOf="@+id/startDate" />
 
     <TextView
         android:id="@+id/authors"
@@ -96,7 +120,21 @@
         app:layout_constraintTop_toTopOf="@+id/status" />
 
     <TextView
-        android:id="@+id/broadcastView"
+        android:id="@+id/startView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:textColor="@color/viewAnimeMainTextColor"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/view"
+        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/chaptersView" />
+
+    <TextView
+        android:id="@+id/volumesView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
@@ -110,7 +148,21 @@
         app:layout_constraintTop_toBottomOf="@+id/statusView" />
 
     <TextView
-        android:id="@+id/totalSeasonsView"
+        android:id="@+id/chaptersView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:textColor="@color/viewAnimeMainTextColor"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/view"
+        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/volumesView" />
+
+    <TextView
+        android:id="@+id/authorsView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -120,10 +172,10 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintStart_toStartOf="@+id/statusView"
-        app:layout_constraintTop_toBottomOf="@+id/releaseDateView" />
+        app:layout_constraintTop_toBottomOf="@+id/endView" />
 
     <TextView
-        android:id="@+id/releaseDateView"
+        android:id="@+id/endView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -132,8 +184,8 @@
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/view"
-        app:layout_constraintStart_toStartOf="@+id/broadcastView"
-        app:layout_constraintTop_toBottomOf="@+id/broadcastView" />
+        app:layout_constraintStart_toStartOf="@+id/startView"
+        app:layout_constraintTop_toBottomOf="@+id/startView" />
 
     <TextView
         android:id="@+id/endDateView"
@@ -145,7 +197,7 @@
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/view"
-        app:layout_constraintTop_toBottomOf="@+id/releaseDateView" />
+        app:layout_constraintTop_toBottomOf="@+id/endView" />
 
     <TextView
         android:id="@+id/adView"
@@ -195,6 +247,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="8dp"
+        android:gravity="start"
         android:textColor="@color/viewAnimeMainTextColor"
         android:textSize="14sp"
         android:textStyle="bold"
@@ -220,11 +273,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:gravity="start"
         android:maxLines="3"
         android:textColor="@color/viewAnimeMainTextColor"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/view"
+        app:layout_constraintStart_toStartOf="@+id/japaneseView"
         app:layout_constraintTop_toBottomOf="@+id/japaneseView" />
 
     <TextView
@@ -246,7 +301,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="-24dp"
+        android:layout_marginBottom="-16dp"
         android:background="@drawable/transparent_blue2"
         app:layout_constraintBottom_toBottomOf="@+id/viewMore2"
         app:layout_constraintEnd_toEndOf="parent"
