--- a/app/src/main/res/layout/anime_list_fragment.xml
+++ b/app/src/main/res/layout/anime_list_fragment.xml
@@ -102,8 +102,17 @@
             </com.google.android.material.tabs.TabLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
+        <View
+            android:id="@+id/view10"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@drawable/line"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
     </com.google.android.material.appbar.AppBarLayout>
+
+
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
